--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Lê Văn Labubu</span>
+            <span class="d-block d-lg-none">Phạm Tiến Đạt</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                     src="./assets/img/profile-me.jpg" alt="..." /></span>
                 </a>
@@ -107,7 +107,7 @@
                             <b>Ngắn hạn:</b>
                         </div>
                         <div class="col-lg-10 col-8">
-                            Tốt nghiệp Đại học bôn ba, tham gia chính thức vào công ty. Sau 2 - 3 năm trở thành trưởng nhóm
+                            Tốt nghiệp Đại học Bách Khoa Hà Nội, tham gia chính thức vào công ty. Sau 2 - 3 năm trở thành trưởng nhóm
                             công nghệ
                         </div>
                     </div>
