--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                     </div>
                 </div>
                 <div class="social-icons">
-                    <a class="social-icon" href="https://www.facebook.com/Lamsoc010/" target="_blank"><i
+                    <a class="social-icon" href="https://www.facebook.com/pdat.05" target="_blank"><i
                             class="fab fa-facebook-f"></i></a>
-                    <a class="social-icon" href="https://github.com/lamsoc010?tab=repositories" target="_blank"><i
+                    <a class="social-icon" href="https://github.com/pdat05" target="_blank"><i
                             class="fab fa-github"></i></a>
                 </div>
 
@@ -148,7 +148,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Làm đồ án các môn học</h3>
-                        <div class="subheading mb-3">Trường ĐH Bôn Ba</div>
+                        <div class="subheading mb-3">Trường ĐH Bách Khoa Hà Nội</div>
                         <p>Phần mềm Desktop Quản Lý Ký túc xá Phú Xuân (Java Swing + SQL)</p>
                         <p>Ứng dụng Quản lý khách sạn với môn Cấu trúc dữ liệu và giải thuật</p>
                         <p>Website bán giày (Java web Jsp, Hibernate),...</p>
