Update personal information in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             Ngày sinh:
                         </div>
                         <div class="col-lg-10 col-8">
-                            11/11/2025
+                            11/12/2025
                         </div>
                     </div>
                     <div class="row">
@@ -67,7 +67,7 @@
                             Điện thoại:
                         </div>
                         <div class="col-lg-10 col-8">
-                            0965.169.300
+                            086.987.2101
                         </div>
                     </div>
                     <div class="row">
@@ -75,7 +75,7 @@
                             Quê quán:
                         </div>
                         <div class="col-lg-10 col-8">
-                            Phường/Xã, Thành phố
+                            Thành phố Hải Phòng
                         </div>
                     </div>
                     <div class="row">
@@ -83,7 +83,7 @@
                             Email:
                         </div>
                         <div class="col-lg-10 col-8">
-                            labubu@gmail.com
+                            datpham05.work@@gmail.com
                         </div>
                     </div>
                     <!-- <div class="row">
