--- a/index.html
+++ b/index.html
@@ -188,23 +188,12 @@
                 <h2 class="mb-5">Học vấn</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Đại học BÔN BA</h3>
-                        <div class="subheading mb-3">Công nghệ và Kinh Doanh</div>
-                        <div>Hiện đang là sinh viên năm cuối, chuyên ngành Công nghệ thông tin</div>
+                        <h3 class="mb-0">Đại học Bách Khoa</h3>
+                        <div class="subheading mb-3">Công nghệ Giáo dục</div>
+                        <div>Hiện đang là sinh viên năm ba, chuyên ngành Công nghệ thông tin</div>
                         <!-- <p>GPA hiện tại: 3.83</p> -->
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">10/2020 - Nay</span></div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Đại học TDTT BA BÔN</h3>
-                        <div class="subheading mb-3">Huấn luyện thể thao</div>
-                        <div>Học chuyên ngành bóng đá, được 1 năm thì bảo lưu đi làm</div>
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary">8/2017 - 9/2018</span></div>
-                </div>
-
-            </div>
+                    <div class="flex-shrink-0"><span class="text-primary">10/2023 - Nay</span></div>
         </section>
         <hr>
         <!-- Skills-->
