--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <section class="resume-section" id="about">
             <div class="resume-section-content">
                 <h1 class="mb-0">
-                    LÊ VĂN
-                    <span class="text-primary">LABUBU</span> 
+                    PHẠM TIẾN
+                    <span class="text-primary">ĐẠT</span> 
                 </h1>
                 <h5 class="mb-0 ">Fresher Backend(Java)</h5>
                 <hr>
@@ -149,9 +149,9 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Làm đồ án các môn học</h3>
                         <div class="subheading mb-3">Trường ĐH Bách Khoa Hà Nội</div>
-                        <p>Phần mềm Desktop Quản Lý Ký túc xá Phú Xuân (Java Swing + SQL)</p>
+                        <p>Phần mềm Desktop Quản Lý BÃI GỬI XE (Java Swing + SQL)</p>
                         <p>Ứng dụng Quản lý khách sạn với môn Cấu trúc dữ liệu và giải thuật</p>
-                        <p>Website bán giày (Java web Jsp, Hibernate),...</p>
+                        <p>Website XSKT (Java web Jsp, Hibernate),...</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">10/2022 - Nay</span></div>
                 </div>
